--- a/tex/answers.tex
+++ b/tex/answers.tex
@@ -68,7 +68,8 @@
 
 \subsection*{I-f. 结论}
 \textcircled{1}首先从收敛的速度进行比较可以看出,使用full-weighting、二次插值和FMG的误差下降速度要大于使用injection、线性插值和V-cycle的误差下降速度.\\[2pt]
-\textcircled{2}从I-e的结果可以看出,随着网格的不停加密,最终的结果所能达到的最低相对误差越来越小,但是仍然很难达到所要求的$\epsilon=2.2\times10^{-16}$.具体原因我觉得是随着矩阵的阶数的增加,矩阵的条件数也在不断增大,条件数增大所导致的精度下降的作用会慢慢的超过网格加密所带来的精度提升的作用,所以导致了相对误差很难下降到所要求的值.
+\textcircled{2}从I-e的结果可以看出,随着网格的不停加密,最终的结果所能达到的最低相对误差越来越小,但是仍然很难达到所要求的$\epsilon=2.2\times10^{-16}$.具体原因我觉得是对于很稀疏的网格来说,它本身使用离散的方法求解微分方程所导致的误差
+就比较大,所以能达到的最小相对误差也比较打,而随着阶数的增加,能达到的最小相对误差会越来越小,但是同时系数矩阵的条件数也在不断增大,条件数增大所导致的精度下降的作用会慢慢的超过网格加密所带来的精度提升的作用,所以导致了此时相对误差也很难下降到所要求的值.
 
 \section*{II. 二维问题}
 \hspace{0.9em}
